--- a/src/PG1-Zhuye/pg1-3_life.html
+++ b/src/PG1-Zhuye/pg1-3_life.html
@@ -14,6 +14,18 @@
 	<script src="./src/pg1-3_life.js"></script>
 </head>
 <style>
+	@font-face {
+		font-family: "tabletitle";
+		src: url("../../image/tabletitle.woff") format("woff");
+	}
+
+	.customfont {
+		
+		font-weight: bolder;
+		font-family: 'tabletitle';
+		letter-spacing: 3px;
+	}
+
 	#weather {
 		width: 100%;
 	}
