--- a/src/PG1-Zhuye/pg1_main.html
+++ b/src/PG1-Zhuye/pg1_main.html
@@ -21,6 +21,8 @@
 	}
 
 	#horzionalnav ul {
+		left: 15%;
+
 		position: absolute;
 		display: flex;
 		padding: 0px;
@@ -96,11 +98,7 @@
 					<div class="Guide_back">今日不宜</div>
 				</li>
 			</ul>
-			<div id="musicplayerdiv">
-				<iframe frameborder="no" width=200px height=40px
-					src="//music.163.com/outchain/player?type=2&id=1383811881&auto=0&height=32"
-					style="margin-top: -9px; "></iframe>
-			</div>
+
 		</div>
 		<div id="pg1_main_iframebox">
 			<iframe id="pg1iframe" class="embed-responsive-item iframepage" scrolling="no"
@@ -120,9 +118,7 @@
 		height: 500px;
 	}
 
-	#musicplayerdiv {
-		margin-left: 70%;
-	}
+
 </style>
 
 <script>
