--- a/src/PG5-Usercenter/pg5_main.html
+++ b/src/PG5-Usercenter/pg5_main.html
@@ -49,8 +49,8 @@
 				<span id="Username">NULL</span>
 			</div>
 		</div>
-		<div class="col-2"
-			style="position: fixed;height: 30px;bottom: 0px;background-color: rgb(104, 119, 255); line-height: 30px; text-align: center;">
+		<div class="col-md-3 col-lg-2 me-0 px-3"
+			style="position: fixed;height: 30px;bottom: 0px;background-color: rgb(56, 116, 207); line-height: 30px; text-align: center;">
 			left footer
 		</div>
 	</header>
