--- a/src/PG1-Zhuye/pg1-3_life.html
+++ b/src/PG1-Zhuye/pg1-3_life.html
@@ -12,20 +12,9 @@
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
 	<script src="./src/pg1-3_life.js"></script>
+	<link rel="stylesheet" href="../common.css">
 </head>
 <style>
-	@font-face {
-		font-family: "tabletitle";
-		src: url("../../image/tabletitle.woff") format("woff");
-	}
-
-	.customfont {
-		
-		font-weight: bolder;
-		font-family: 'tabletitle';
-		letter-spacing: 3px;
-	}
-
 	#weather {
 		width: 100%;
 	}
@@ -45,12 +34,5 @@
 		<div id="moneytablediv"></div>
 	</div>
 </body>
-<style>
-	.mingyan {
-		font-size: 1.5em;
-		font-family: "楷体";
-		color: red;
-	}
-</style>
 
 </html>
