--- a/src/PG2-Study/pg2-3_goodbooks.html
+++ b/src/PG2-Study/pg2-3_goodbooks.html
@@ -13,15 +13,14 @@
 	<title>Document</title>
 	<script src="../../database/se_pg2-3_booklist.js"></script>
 	<script src="./src/pg2-3_goodbooks.js"></script>
-	<script src="../iframesetting.js"></script>
+	<script src="../common.js"></script>
 
 
 </head>
 
 <body>
 	<div class="container">
-		<p style="font-size: 2em;font-weight: bolder;text-align: center;">好书推荐</p>
-
+		<p style="font-family: '楷体'; font-size: 2em;font-weight: bolder;text-align: center;">好书推荐</p>
 		<div id="bookselectordiv" class="form-inline form-horizontal">
 			<label class="control-label col-sm-0">筛选：</label>
 			<select class="form-control" style="width: 14em;" id="bookselectlist">
