--- a/src/PG4-News/pg4-4_yule.html
+++ b/src/PG4-News/pg4-4_yule.html
@@ -8,7 +8,18 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<title>Document</title>
+	<link rel="stylesheet" href="./src/css_pg4_common.css">
 </head>
+<style>
+	.newsimg {
+		width: 200px;
+		height: 130px;
+	}
+
+	.newsimg img {
+		height: 129px;
+	}
+</style>
 
 <body>
 	<table>
@@ -37,62 +48,46 @@
 					不要害怕</a></td>
 		</tr>
 		<tr>
-			<td class="newsimg"><a target="_blank" href="https://ent.sina.com.cn/2021-01-06/doc-iiznezxt0861424.shtml"><img src="../../image/img/news/yule/guimie.jpg"></a></td>
-			<td class="newsdescription"><a target="_blank" href="https://ent.sina.com.cn/2021-01-06/doc-iiznezxt0861424.shtml">日本票房：《鬼灭之刃》连续12周夺冠无人能及</a></td>
+			<td class="newsimg"><a target="_blank"
+					href="https://ent.sina.com.cn/2021-01-06/doc-iiznezxt0861424.shtml"><img
+						src="../../image/img/news/yule/guimie.jpg"></a></td>
+			<td class="newsdescription"><a target="_blank"
+					href="https://ent.sina.com.cn/2021-01-06/doc-iiznezxt0861424.shtml">日本票房：《鬼灭之刃》连续12周夺冠无人能及</a></td>
 		</tr>
 		<tr>
-			<td class="newsimg"><a target="_blank" href="https://ent.sina.com.cn/m/f/2021-01-05/doc-iiznctkf0307429.shtml"><img src="../../image/img/news/yule/jixianfeng.jpg"></a></td>
-			<td class="newsdescription"><a target="_blank" href="https://ent.sina.com.cn/m/f/2021-01-05/doc-iiznctkf0307429.shtml">韩影票房：成龙杨洋《急先锋》韩国上映夺亚军</a></td>
+			<td class="newsimg"><a target="_blank"
+					href="https://ent.sina.com.cn/m/f/2021-01-05/doc-iiznctkf0307429.shtml"><img
+						src="../../image/img/news/yule/jixianfeng.jpg"></a></td>
+			<td class="newsdescription"><a target="_blank"
+					href="https://ent.sina.com.cn/m/f/2021-01-05/doc-iiznctkf0307429.shtml">韩影票房：成龙杨洋《急先锋》韩国上映夺亚军</a>
+			</td>
 		</tr>
 		<tr>
-			<td class="newsimg"><a target="_blank" href="https://ent.sina.com.cn/y/yneidi/2021-01-06/doc-iiznctkf0523150.shtml"><img src="../../image/img/news/yule/luocong.jpg"></a></td>
-			<td class="newsdescription"><a target="_blank" href="https://ent.sina.com.cn/y/yneidi/2021-01-06/doc-iiznctkf0523150.shtml">罗聪方否认歌曲抄袭 许嵩方称将提交专业机构鉴定</a></td>
+			<td class="newsimg"><a target="_blank"
+					href="https://ent.sina.com.cn/y/yneidi/2021-01-06/doc-iiznctkf0523150.shtml"><img
+						src="../../image/img/news/yule/luocong.jpg"></a></td>
+			<td class="newsdescription"><a target="_blank"
+					href="https://ent.sina.com.cn/y/yneidi/2021-01-06/doc-iiznctkf0523150.shtml">罗聪方否认歌曲抄袭
+					许嵩方称将提交专业机构鉴定</a></td>
 		</tr>
 		<tr>
-			<td class="newsimg"><a target="_blank" href="https://ent.sina.com.cn/y/ygangtai/2021-01-06/doc-iiznctkf0500008.shtml"><img src="../../image/img/news/yule/erz.jpg"></a></td>
-			<td class="newsdescription"><a target="_blank" href="https://ent.sina.com.cn/y/ygangtai/2021-01-06/doc-iiznctkf0500008.shtml">徐佳莹发文庆祝儿子满月 乐高趴妈妈肚子表情呆萌</a></td>
+			<td class="newsimg"><a target="_blank"
+					href="https://ent.sina.com.cn/y/ygangtai/2021-01-06/doc-iiznctkf0500008.shtml"><img
+						src="../../image/img/news/yule/erz.jpg"></a></td>
+			<td class="newsdescription"><a target="_blank"
+					href="https://ent.sina.com.cn/y/ygangtai/2021-01-06/doc-iiznctkf0500008.shtml">徐佳莹发文庆祝儿子满月
+					乐高趴妈妈肚子表情呆萌</a></td>
 		</tr>
 		<tr>
-			<td class="newsimg"><a target="_blank" href="https://ent.sina.com.cn/y/yneidi/2021-01-06/doc-iiznctkf0497819.shtml"><img src="../../image/img/news/yule/wen.jpg"></a></td>
-			<td class="newsdescription"><a target="_blank" href="https://ent.sina.com.cn/y/yneidi/2021-01-06/doc-iiznctkf0497819.shtml">刘耀文机场被言语攻击 粉丝纷纷要求公司维权</a></td>
+			<td class="newsimg"><a target="_blank"
+					href="https://ent.sina.com.cn/y/yneidi/2021-01-06/doc-iiznctkf0497819.shtml"><img
+						src="../../image/img/news/yule/wen.jpg"></a></td>
+			<td class="newsdescription"><a target="_blank"
+					href="https://ent.sina.com.cn/y/yneidi/2021-01-06/doc-iiznctkf0497819.shtml">刘耀文机场被言语攻击
+					粉丝纷纷要求公司维权</a></td>
 		</tr>
 	</table>
 
 </body>
-<style>
-	table {
-		width: 100%;
-	}
-
-	td {
-		border: rgb(50, 100, 50) 2px solid;
-	}
-
-	.newsimg {
-		width: 200px;
-		height: 130px;
-	}
-
-	.newsimg img {
-
-		height: 129px;
-		;
-	}
-
-	.newsdescription {
-		vertical-align: top;
-		font-size: 1.5em;
-		height: 130px;
-	}
-
-	.newsdescription a {
-		text-decoration: none;
-		color: black;
-	}
-
-	.newsdescription a:hover {
-		color: rgb(0, 119, 255);
-	}
-</style>
 
 </html>
