--- a/src/PG1-Zhuye/pg1-1_zhuye.html
+++ b/src/PG1-Zhuye/pg1-1_zhuye.html
@@ -8,11 +8,14 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous"></script>
-	<script src="../iframesetting.js"></script>
+
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<title>Document</title>
+	<title>pg1-1</title>
+	<script src="../common.js"></script>
+	<link rel="stylesheet" href="../common.css">
 	<script src="./src/pg1-1_zhuye.js"></script>
+	
 </head>
 <style>
 	body {
@@ -25,34 +28,21 @@
 		margin: 0px;
 	}
 
-	@font-face {
-		font-family: "tabletitle";
-		src: url("../../image/tabletitle.woff") format("woff");
-	}
 
-	.customfont {
-		font-weight: bolder;
-		font-family: 'tabletitle';
-		letter-spacing: 3px;
-	}
 </style>
 
 <body>
 	<div class="container">
-		<h1 id="classtabletitle" class="customfont">1</h1>
+		<h1 id="classtabletitle" class="tabletitle_space_class">1</h1>
 		<p class="mingyan">书山有路勤为径，学海无涯苦作舟——唐·韩愈</p>
 		<div id="classtable"></div>
-		<h1 class="customfont">作业表</h1>
+		<h1 class="tabletitle_space_class">作业表</h1>
 		<p class="mingyan">构成天才的决定因素就应是勤奋——现代·郭沫若</p>
 		<div id="homeworktable"></div>
 	</div>
 </body>
 <style>
-	.mingyan {
-		font-size: 1.5em;
-		font-family: "楷体";
-		color: red;
-	}
+
 </style>
 
 </html>
