--- a/src/PG1-Zhuye/pg1_main.html
+++ b/src/PG1-Zhuye/pg1_main.html
@@ -8,78 +8,12 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous"></script>
-	<script src="../iframesetting.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<title>Document</title>
+	<title>page1</title>
+	<script src="../common.js"></script>
+	<link rel="stylesheet" href="./src/css_pg1_main.css">
 </head>
-<style>
-	body {
-		--Num_donghuashijian: 0.1s;
-		--totalheight: 36px;
-
-	}
-
-	#horzionalnav ul {
-		left: 15%;
-
-		position: absolute;
-		display: flex;
-		padding: 0px;
-		margin: 0px;
-
-		width: 70%;
-		height: var(--totalheight);
-
-		border-bottom: none;
-		cursor: pointer;
-	}
-
-	#horzionalnav li {
-		padding: 0px;
-
-		height: inherit;
-		width: inherit;
-
-		line-height: var(--totalheight);
-		list-style-type: none;
-		text-align: center;
-		cursor: pointer;
-
-		transform-style: preserve-3d;
-		transition: all var(--Num_donghuashijian);
-
-		border: 1px rgba(100, 100, 255, 0.7) dotted;
-	}
-
-	#horzionalnav li:hover {
-		transform: rotateX(90deg);
-	}
-
-	#horzionalnav li .Liactive {
-		background-color: orange;
-	}
-
-	.Guide_back,
-	.Guide_front {
-		margin: 0px;
-		padding: 0px;
-		position: absolute;
-		width: 100%;
-	}
-
-	.Guide_front {
-		height: var(--totalheight);
-		background-color: rgb(136, 205, 241);
-		transform: translateZ(calc(var(--totalheight)*0.5));
-	}
-
-	.Guide_back {
-		height: var(--totalheight);
-		background-color: pink;
-		transform: translateY(calc(var(--totalheight)*0.5)) rotateX(-90deg);
-	}
-</style>
 
 <body>
 	<div id="navdiv">
@@ -107,51 +41,37 @@
 	</div>
 
 </body>
-<style>
-	#pg1_main_iframebox {
-		padding-top: 50px;
-	}
-
-	.iframepage {
-		border: none;
-		width: 100%;
-		height: 500px;
-	}
-
-
-</style>
-
 <script>
 	window.onload = function () {
 		GBFheight(0, "pg1_main");
 		GBFheight(0, "centerpagearea");
 	}
 
+	var hei = parent.document.documentElement.clientHeight;
 	$("#horzionalnav li").eq(0).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 0, "Liactive");
 		$("#pg1_main_iframebox iframe").attr("src", "./pg1-1_zhuye.html")
-		GBFheight(0, "pg1_main");
-		GBFheight(0, "centerpagearea");
+		GBFheight(50, "pg1_main", 841);
+		GBFheight(50, "centerpagearea", 841);
 
 	})
 	$("#horzionalnav li").eq(1).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 1, "Liactive");
 		$("#pg1_main_iframebox iframe").attr("src", "./pg1-2_lunch.html")
-		GBFheight(0, "pg1_main");
-		GBFheight(0, "centerpagearea");
+		GBFheight(150, "pg1_main", 560);
+		GBFheight(-100, "centerpagearea", hei);
 	})
 	$("#horzionalnav li").eq(2).click(function () {
 		switchfn("#horzionalnav li .Guide_front", 2, "Liactive");
 		$("#pg1_main_iframebox iframe").attr("src", "./pg1-3_life.html")
-		GBFheight(0, "pg1_main");
-		GBFheight(0, "centerpagearea");
+		GBFheight(150, "pg1_main", 530);
+		GBFheight(-100, "centerpagearea", hei);
 	})
 
 	function switchfn(target, num, classname) {
 		$(target + ":not(:eq(" + num + "))").removeClass(classname);
 		$(target + ":eq(" + num + ")").addClass(classname);
 	}
-
 </script>
 
 </html>
