--- a/src/PG2-Study/pg2-1_collection.html
+++ b/src/PG2-Study/pg2-1_collection.html
@@ -11,14 +11,15 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
-	<script src="../iframesetting.js"></script>
+	<script src="../common.js"></script>
 	<script src="./src/pg2-1_collection.js"></script>
+	<link rel="stylesheet" href="../common.css">
 
 </head>
 
 <body>
 	<div class="container">
-		<p style="font-size: 2em;font-weight: bolder;text-align: center;">收藏夹</p>
+		<h1 class="tabletitleclass" style="font-size: 2em;font-weight: bolder;text-align: center;">收藏夹</h1>
 		<p>介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍</p>
 		<div id="collectiontablediv"></div>
 	</div>
