--- a/src/PG2-Study/pg2-2_tool.html
+++ b/src/PG2-Study/pg2-2_tool.html
@@ -11,40 +11,14 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>Document</title>
-
+	<link rel="stylesheet" href="./src/css_pg2-2_tool.css">
+	<link rel="stylesheet" href="../common.css">
 </head>
-<style>
-	.container {
-		border: springgreen 2px solid;
-
-	}
-
-	#verticalmenu_ul li {
-		--height: 60px;
-		width: calc(2.5 * var(--height));
-		height: var(--height);
-
-		text-align: center;
-		line-height: var(--height);
-		border: steelblue 1px solid;
-		background-color: rgba(74, 157, 253, 0.5);
-		cursor: pointer;
-	}
-
-	#verticalmenu_ul li:hover {
-		background-color: coral;
-	}
-
-	#verticalmenu_ul li div {
-		margin: 1em auto;
-		text-align: center;
-	}
-</style>
 
 <body>
 	<div class="container-fluid">
 		<div>
-			<p style="font-size: 2em;font-weight: bolder;text-align: center;">工具箱</p>
+			<h1 style="font-size: 2em;font-weight: bolder;text-align: center;">工具箱</h1>
 			<p>介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍</p>
 		</div>
 		<div style="display: flex;width: 100%;">
@@ -138,54 +112,6 @@
 	</div>
 </body>
 
-<style>
-	#toolbox {
-
-		overflow: hidden;
-		height: 701px;
-		flex: 1;
-	}
-
-	#toolboxswitch {
-		position: relative;
-		margin: 0 auto 0 10px;
-		height: 2700px;
-	}
-
-	.iframeboxs {
-
-		overflow: hidden;
-		height: 700px;
-		width: 100%;
-
-	}
-
-	iframe {
-		width: 100%;
-		border: skyblue 2px solid;
-	}
-
-	#weblisttable {
-		width: 600px;
-	}
-
-	#weblisttable td {
-		padding: 10px;
-		border: steelblue 1px solid;
-	}
-
-	#weblisttable .webtitle {
-		font-weight: bold;
-		font-size: 1.25em;
-		height: 2em;
-		width: 300px;
-	}
-
-	#weblisttable .gonow {
-		text-align: center;
-		width: 100px;
-	}
-</style>
 <script>
 	var animatetime = 200;
 	var animatecounter = 0;
@@ -229,12 +155,5 @@
 		}
 	}
 </script>
-
-<style>
-	.discription {
-		line-height: 1em;
-		text-indent: 2em;
-	}
-</style>
 
 </html>
