--- a/src/PG3-Chat/pg3_main.html
+++ b/src/PG3-Chat/pg3_main.html
@@ -10,11 +10,15 @@
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	<title>Document</title>
+	<script src="../common.js"></script>
+	<link rel="stylesheet" href="./src/css_pg3_main.css">
 </head>
+<style>
+
+</style>
 
 <body>
 	<div class="container-fluid">
@@ -42,7 +46,7 @@
 						</div>
 					</div>
 				</td>
-				<td id="titlebox" colspan="2" style="padding: 10px;font-size: 1.5em;font-weight: bold;">富婆集团(34)</td>
+				<td id="titlebox" colspan="2" style="padding: 10px;font-size: 1.5em;font-weight: bold;">外行人科技集团(34)</td>
 
 			</tr>
 			<tr>
@@ -50,25 +54,25 @@
 					<div>
 						<ul style="list-style: none;" id="lianxirenul">
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆1</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">老板</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆2</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">服务员小红</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆3</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">小王</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆4</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">客户老张</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆5</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">客户李大妈</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆6</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">裁缝老黄</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆7</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">二手商老图</div>
 							</li>
 						</ul>
 					</div>
@@ -76,29 +80,31 @@
 				<td id="chatbox" class="right2" rowspan="2">
 					<iframe src="./pg3_chat_liaotiankuang.html" frameborder="none" width="100%" height="320px"></iframe>
 				</td>
-				<td id="infobox" class="right1"><div>
-					<h4 style="text-align: center;">公告：</h4>
-					<p style="text-indent: 2em;">入群找群主领超级大红包，大概$5000000吧。</p>
-				</div></td>
+				<td id="infobox" class="right1">
+					<div>
+						<h4 style="text-align: center;">公告：</h4>
+						<p style="text-indent: 2em;">入群找群主领超级大红包，大概$5000000吧。</p>
+					</div>
+				</td>
 			</tr>
 			<tr>
 				<td id="groupbox" class="right1" rowspan="2">
 					<div>
 						<ul style="list-style: none;" id="lianxirenul">
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆1</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">群主-老板</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆2</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">管理员-小红</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆3</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">老张</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆4</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">老婆</div>
 							</li>
 							<li class="lianxirenli">
-								<div><img width="30px" src="../../image/icon/fupo.jpg">富婆5</div>
+								<div><img width="30px" src="../../image/icon/fupo.jpg">小李</div>
 							</li>
 						</ul>
 					</div>
@@ -114,65 +120,11 @@
 		</table>
 	</div>
 </body>
-<style>
-	#chatboxtable {
-
-		width: 100%;
-		height: 500px;
+<script>
+	window.onload = function () {
+		GBFheight(0, "pg1_main", 600);
+		GBFheight(0, "centerpagearea", 900);
 	}
-
-	#chatboxtable td {
-		border: brown 1px solid;
-	}
-
-	.dropdown-menu {
-		min-width: 50px;
-	}
-
-
-	#searchbox {
-		padding: 5px;
-		width: 150px;
-		height: 50px;
-	}
-
-	#lianxirenbox {
-		vertical-align: top;
-		padding: 5px;
-		width: 150px;
-	}
-
-	#infobox {
-		vertical-align: top;
-		height: 150px;
-		width: 150px;
-	}
-
-	#inputbox {
-		vertical-align: top;
-		height: 125px;
-	}
-
-	#lianxirenul {
-		padding: 0;
-		width: 100%;
-	}
-
-	#chatbox {
-		vertical-align: top;
-	}
-
-	#lianxirenul .lianxirenli {
-		border: blanchedalmond 1px solid;
-		height: 4em;
-		line-height: 4em;
-
-		padding: 0 15px;
-		width: 100%;
-	}
-	#groupbox{
-		vertical-align: top;
-	}
-</style>
+</script>
 
 </html>
