--- a/src/PG4-News/pg4-1_times.html
+++ b/src/PG4-News/pg4-1_times.html
@@ -8,6 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<title>Document</title>
+	<link rel="stylesheet" href="./src/css_pg4_common.css">
 </head>
 
 <body>
@@ -55,38 +56,4 @@
 	</table>
 
 </body>
-<style>
-	table {
-		width: 100%;
-	}
-
-	td {
-		border: rgb(50, 100, 50) 2px solid;
-	}
-
-	.newsimg {
-		width: 200px;
-		height: 130px;
-	}
-
-	.newsimg img {
-		width: 199px;
-	}
-
-	.newsdescription {
-		vertical-align: top;
-		font-size: 1.5em;
-		height: 130px;
-	}
-
-	.newsdescription a{
-		text-decoration: none;
-		color: black;
-	}
-
-	.newsdescription a:hover{
-		color: rgb(0, 119, 255);
-	}
-</style>
-
 </html>
