--- a/src/PG4-News/pg4_main.html
+++ b/src/PG4-News/pg4_main.html
@@ -8,52 +8,60 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<title>Document</title>
+	<script src="../common.js"></script>
 </head>
+<style>
+	body {
+		margin-top: 1em;
+	}
+</style>
 
 <body>
-	<ul class="nav nav-pills" id="navpillsul">
-		<li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="#">时事</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">科技</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">体育</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">娱乐圈</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><span
-					style="text-decoration: line-through;">黄色网站</span></a>
-		</li>
-	</ul>
-	<div id="siwtchhidderbox">
-		<div id="switchbox">
-			<div class="contentswitcher">
-				<iframe src="./pg4-1_times.html" frameborder="no" width="100%"></iframe>
-			</div>
-			<div class="contentswitcher">
-				<iframe src="./pg4-2_tech.html" frameborder="no" width="100%"></iframe>
-			</div>
-			<div class="contentswitcher">
-				<iframe src="./pg4-3_sport.html" frameborder="no" width="100%"></iframe>
-			</div>
-			<div class="contentswitcher">
-				<iframe src="./pg4-4_yule.html" frameborder="no" width="100%"></iframe>
+	<div style="width: 801px;margin-left:7%;">
+		<ul class="nav nav-pills" id="navpillsul">
+			<li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="#">时事</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">科技</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">体育</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">娱乐圈</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><span
+						style="text-decoration: line-through;">黄色网站</span></a>
+			</li>
+		</ul>
+		<div id="siwtchhidderbox">
+			<div id="switchbox">
+				<div class="contentswitcher">
+					<iframe src="./pg4-1_times.html" frameborder="no" width="100%"></iframe>
+				</div>
+				<div class="contentswitcher">
+					<iframe src="./pg4-2_tech.html" frameborder="no" width="100%"></iframe>
+				</div>
+				<div class="contentswitcher">
+					<iframe src="./pg4-3_sport.html" frameborder="no" width="100%"></iframe>
+				</div>
+				<div class="contentswitcher">
+					<iframe src="./pg4-4_yule.html" frameborder="no" width="100%"></iframe>
+				</div>
 			</div>
 		</div>
 	</div>
-
 </body>
 <script>
 	window.onload = function () {
 		var clheight = document.documentElement.clientHeight;
-		$(".contentswitcher").css("height", clheight-50);
-		$(".contentswitcher iframe").css("height", clheight-51);
+		$(".contentswitcher").css("height", clheight - 200);
+		$(".contentswitcher iframe").css("height", clheight - 201);
+		GBFheight(50, "pg1_main");
+		GBFheight(100, "centerpagearea");
 	}
-
 
 	var animatetime = 300;
 	var animatecounter = 0;
@@ -102,8 +110,10 @@
 <style>
 	#siwtchhidderbox {
 		border: hotpink 2px solid;
+		display: block;
 		width: 800px;
 		overflow: hidden;
+
 	}
 
 	#switchbox {
