--- a/src/PG5-Usercenter/pg5_main.html
+++ b/src/PG5-Usercenter/pg5_main.html
@@ -13,24 +13,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<title>Document</title>
+	<link rel="stylesheet" href="./src/css_pg5_main.css">
 </head>
-
-<style>
-	.bd-placeholder-img {
-		font-size: 1.125rem;
-		text-anchor: middle;
-		-webkit-user-select: none;
-		-moz-user-select: none;
-		user-select: none;
-	}
-
-	@media (min-width: 768px) {
-		.bd-placeholder-img-lg {
-			font-size: 3.5rem;
-		}
-	}
-</style>
-
 </head>
 
 <body>
@@ -62,25 +46,21 @@
 					<ul class="nav flex-column">
 						<li class="nav-item" id="basicinfo">
 							<a class="nav-link active" aria-current="page" href="#">
-								<span data-feather="home"></span>
 								基础信息
 							</a>
 						</li>
 						<li class="nav-item" id="identityinfo">
 							<a class="nav-link" href="#">
-								<span data-feather="file"></span>
 								安全信息
 							</a>
 						</li>
 						<li class="nav-item" id="mywallet">
 							<a class="nav-link" href="#">
-								<span data-feather="shopping-cart"></span>
 								我的钱包
 							</a>
 						</li>
 						<li class="nav-item" id="contactus">
 							<a class="nav-link" href="#">
-								<span data-feather="users"></span>
 								联系客服
 							</a>
 						</li>
@@ -106,6 +86,12 @@
 	</footer>
 </body>
 <script>
+	var currentuser = JSON.parse(sessionStorage.getItem("file_currentuser"));
+	if (currentuser == null) {
+		alert("请先登录");
+	}
+	$(".RightUserItem #Username").html("Hi," + currentuser.name);
+
 	$("ul #basicinfo").click(function () {
 		changeiframes("./pg5-1_userinfo.html", "400px", "用户信息", 0);
 	});
@@ -119,7 +105,6 @@
 		changeiframes("./pg5-1_userinfo.html", "400px", "没有啦2", 3);
 	});
 
-
 	function changeiframes(src, iframeheight, title, number) {
 		$("#iframebox iframe").attr("src", src);
 		$("#iframebox iframe").attr("height", iframeheight);
@@ -127,158 +112,6 @@
 		$(".nav-link:not(:eq(" + number + "))").removeClass("active");
 		$(".nav-link:eq(" + number + ")").addClass("active");
 	}
-
-
-
-
-
-
-
-
-
 </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<style>
-	.form-control {
-		max-width: 300px;
-	}
-
-	.RightUserItem {
-		display: block;
-		float: right;
-		line-height: 50px;
-		font-size: 18px;
-		padding: 0 5px;
-	}
-
-	.nav-item:hover {
-		background-color: wheat;
-	}
-</style>
-
-
-
-
-<style>
-	body {
-		font-size: .875rem;
-	}
-
-	.feather {
-		width: 16px;
-		height: 16px;
-		vertical-align: text-bottom;
-	}
-
-	/*
- * Sidebar
- */
-
-	.sidebar {
-		position: fixed;
-		top: 0;
-		/* rtl:raw:
-  right: 0;
-  */
-		bottom: 0;
-		/* rtl:remove */
-		left: 0;
-		z-index: 100;
-		/* Behind the navbar */
-		padding: 48px 0 0;
-		/* Height of navbar */
-		box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-	}
-
-	@media (max-width: 767.98px) {
-		.sidebar {
-			top: 5rem;
-		}
-	}
-
-	.sidebar-sticky {
-		position: relative;
-		top: 0;
-		height: calc(100vh - 48px);
-		padding-top: .5rem;
-		overflow-x: hidden;
-		overflow-y: auto;
-		/* Scrollable contents if viewport is shorter than content. */
-	}
-
-	.sidebar .nav-link {
-		font-weight: 500;
-		color: #333;
-	}
-
-	.sidebar .nav-link .feather {
-		margin-right: 4px;
-		color: #727272;
-	}
-
-	.sidebar .nav-link.active {
-		color: #007bff;
-	}
-
-	.sidebar .nav-link:hover .feather,
-	.sidebar .nav-link.active .feather {
-		color: inherit;
-	}
-
-	.sidebar-heading {
-		font-size: .75rem;
-		text-transform: uppercase;
-	}
-
-	/*
- * Navbar
- */
-
-	.navbar-brand {
-		padding-top: .75rem;
-		padding-bottom: .75rem;
-		font-size: 1rem;
-		background-color: rgb(35, 145, 179);
-		box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-	}
-
-	.navbar .navbar-toggler {
-		top: .25rem;
-		right: 1rem;
-	}
-
-	.navbar .form-control {
-		padding: .75rem 1rem;
-		border-width: 0;
-		border-radius: 0;
-	}
-
-	.form-control-dark {
-		color: #fff;
-		background-color: skyblue;
-		border-color: rgba(255, 255, 255, .1);
-	}
-
-	.form-control-dark:focus {
-		border-color: transparent;
-		box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
-	}
-</style>
 
 </html>
