--- a/src/account/account.html
+++ b/src/account/account.html
@@ -12,79 +12,17 @@
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>AccountPage</title>
 
+	<link rel="stylesheet" href="./account.css">
+	<link rel="stylesheet" href="../common.css">
 	<script src="./account.js"></script>
 
+
 </head>
-<style>
-	body {
-		background: url("../../image/bg/loginbg.jpg")center fixed no-repeat;
-		min-width: 1000px;
-	}
-
-	/*#topbg {
-		position: fixed;
-		top: 0px;
-		background: url("../../image/bg/top.jpg") top no-repeat;
-		width: 100%;
-		height: 400px;
-		z-index: -1;
-	}
-
-	#bottombg {
-		position: fixed;
-		bottom: 0px;
-		background: url("../../image/bg/bottom.jpg") bottom no-repeat;
-		width: 100%;
-		height: 500px;
-		z-index: -1;
-	}*/
-	#table-div {
-		width: 525px;
-		margin-top: 200px;
-		margin-left: 60%;
-		background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(250, 250, 250, 0.1));
-		padding: 10px;
-		border-radius: 15px;
-		border: blanchedalmond 2px solid;
-	}
-
-	#AccountTable {
-		width: 500px;
-
-
-
-	}
-
-	#login,
-	#register {
-		height: 65px;
-		width: 25%;
-		text-align: center;
-		cursor: pointer;
-		font-size: 2em;
-		font-weight: bold;
-		color: brown;
-	}
-
-	#AccountTableInfo {
-		border-color: rgba(255, 150, 150, 0.5);
-		border-width: 1px;
-		border-style: solid;
-		overflow: hidden;
-		height: 300px;
-		max-width: 500px;
-	}
-
-	@font-face {
-		font-family: "titlechar";
-		src: url("../../image/titlechar.woff") format("woff");
-	}
-</style>
 
 <body>
 	<header id="topbg"></header>
 	<div style="margin-left: 10%;margin-top: -5%; position: absolute;">
-		<span style="font-family: 'titlechar';font-size: 125px;">ABCD</span>
+		<span class="titlecharclass" style="font-size: 125px;">ABCD</span>
 	</div>
 	<div id="table-div">
 
@@ -132,10 +70,10 @@
 							<br><br>
 							<label class="col-sm-4 control-label">性别：</label>
 							<label class="radio-inline">
-								<input type="radio" id="choose_sex_male" name="choose_sex" value="male"> 男
+								<input type="radio" id="choose_sex_male" name="choose_sex" value="男"> 男
 							</label>
 							<label class="radio-inline">
-								<input type="radio" id="choose_sex_female" name="choose_sex" value="female"> 女
+								<input type="radio" id="choose_sex_female" name="choose_sex" value="女"> 女
 							</label>
 							<br><br><br><br>
 							<button id="zhuce" class="btn btn-info  col-sm-offset-4" type="button"
@@ -174,31 +112,5 @@
 		}
 	}
 </script>
-<style>
-	#bottomtab {
-		position: relative;
-		width: 850px;
-	}
-
-	.form-group {
-		line-height: 0.75em;
-		display: flex;
-		width: 350px;
-		margin: 0 auto;
-	}
-
-	#Login_bottomtab {
-		padding: 0px;
-		margin-left: 60px;
-		margin-right: 90px;
-		line-height: 1.25em;
-
-	}
-
-	.form-group label {
-		line-height: 1em;
-		text-align: center;
-	}
-</style>
 
 </html>
