--- a/src/host.html
+++ b/src/host.html
@@ -32,7 +32,7 @@
 				<img id="titlepic" style="margin-top: -1.5em;" src="../image/icon/titlepic.png">
 				<span class="titlecharclass" style="font-size: 40px;line-height: 49px;letter-spacing: 3px;">ABCD</span>
 				<span
-					style="font-size: 20px;line-height: 49px;text-align: center;">&nbsp;&nbsp;学生休闲bar&nbsp;&nbsp;</span>
+					style="font-size: 20px;line-height: 49px;text-align: center;">&nbsp;&nbsp;学生学习休闲bar&nbsp;&nbsp;</span>
 			</div>
 		</div>
 		<!--响应式桌面端部分-->
