--- a/src/PG5-Usercenter/pg5-1_userinfo.html
+++ b/src/PG5-Usercenter/pg5-1_userinfo.html
@@ -67,7 +67,7 @@
 	function fillinput() {//在各种输入框中填入用户信息
 		$("#inputbox_xuehao").val(currentuser.xuehao);
 		$("#inputbox_name").val(currentuser.name);
-		$("#inputbox_class").val(currentuser.banji);
+		$("#inputbox_class").val(currentuser.banjistr);
 		$("#inputbox_age").val(currentuser.age);
 		$("#inputbox_sex").val(currentuser.sex);
 	}
