--- a/src/PG4-News/pg4-1_times.html
+++ b/src/PG4-News/pg4-1_times.html
@@ -23,7 +23,7 @@
 		</tr>
 		<tr>
 			<td class="newsimg"><a target="_blank" href="https://mbd.baidu.com/newspage/data/landingsuper?context=%7B%22nid%22%3A%22news_9404429273634761067%22%7D&n_type=0&p_from=1"><img src="../../image/img/news/times/dongaohui.jpeg"></a></td>
-			<td class="newsdescription"><a target="_blank" href="https://mbd.baidu.com/newspage/data/landingsuper?context=%7B%22nid%22%3A%22news_9404429273634761067%22%7D&n_type=0&p_from=1">国际奥委会：为避免东京奥运被取消，运动员应优先接种疫</a>苗</td>
+			<td class="newsdescription"><a target="_blank" href="https://mbd.baidu.com/newspage/data/landingsuper?context=%7B%22nid%22%3A%22news_9404429273634761067%22%7D&n_type=0&p_from=1">国际奥委会：为避免东京奥运被取消，运动员应优先接种疫苗</a></td>
 		</tr>
 		<tr>
 			<td class="newsimg"><a target="_blank" href="https://mbd.baidu.com/newspage/data/landingsuper?context=%7B%22nid%22%3A%22news_9819019533370945028%22%7D&n_type=0&p_from=1"><img src="../../image/img/news/times/yiqing.jpeg"></a></td>
