--- a/src/PG3-Chat/pg3_main.html
+++ b/src/PG3-Chat/pg3_main.html
@@ -28,7 +28,7 @@
 				<td id="searchbox" class="left2">
 					<div>
 						<img style="width: 30px;" src="../../image/icon/usericon.jpg">
-						<span>Lv 100 炮王</span>
+						<span>Lv 100 神仙</span>
 						<div class="dropdown" style="float: right;">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								<span style="font-size: 25px;margin-top: 1px;" class="glyphicon glyphicon-th-list"
